cambio en la url del fondo

--- a/Ejercicio 2/estilos.css
+++ b/Ejercicio 2/estilos.css
@@ -1,6 +1,6 @@
 body {
   margin: 1;
-  background-image: url(/CSS/fondo2.png);
+  background-image: url(/fondo2.png);
   background-size: cover;
 }
 * {
